--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="ashDiv"></div>
         <div class="whiteDiv"></div>
         <div class="smallAshDiv"></div>
-        <div class="imgDiv"><img src="images/profile.PNG" alt="profile" /></div>
+        <div class="imgDiv"><img src="profile.PNG" alt="profile" /></div>
         <div class="nameDiv">Sowmya BalaAravindhan</div>
         <div class="alignCenter padding10">
           Ganesh Flats,Kollapakkam
